# ENG5059P

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ecg_filter  ecg_filter.cpp  ecg_filter.h  ecg_filter_demo  ecg_filter_demo.cpp  lms_filter_demo  lms_filter_demo.cpp  parameters.h
DNF/: Makefile  cmake_install.cmake
Data/LMS_Output/: output_arm_1.tsv  output_arm_2.tsv  output_relax_arm.tsv  output_relax_wrist.tsv  output_wrist_1.tsv  output_wrist_2.tsv
Data/Output/: output_arm_1.tsv  output_arm_2.tsv  output_relax_arm.tsv  output_relax_wrist.tsv  output_relaxarm_1.tsv  output_relaxarm_2.tsv  output_relaxwrist_1.tsv  output_relaxwrist_2.tsv  output_wrist_1.tsv  output_wrist_2.tsv
Data/ProcessedData/: extracted_arm_1.tsv  extracted_arm_2.tsv  extracted_relax_arm.tsv  extracted_relax_wrist.tsv  extracted_relaxarm_1.tsv  extracted_relaxwrist_1.tsv  extracted_wrist_1.tsv  extracted_wrist_2.tsv
Data/RawData/: data_arm.tsv  notes.txt
Data/TestData/: 2500250020005_0_arm_1.tsv  2500250020005_0_arm_2.tsv  2500250020005_0_relaxarm_1.tsv  2500250020005_0_relaxarm_2.tsv  2500250020005_0_relaxwrist_1.tsv  2500250020005_0_relaxwrist_2.tsv  2500250020005_0_wrist_1.tsv  2500250020005_0_wrist_2.tsv  2500250020005_1_arm_1.tsv  2500250020005_1_arm_2.tsv  2500250020005_1_relaxarm_1.tsv  2500250020005_1_relaxarm_2.tsv  2500250020005_1_relaxwrist_1.tsv  2500250020005_1_relaxwrist_2.tsv  (+3 more)
DataRecord/: COPYING.rtf
PyScript/: GenerateFirCoeff.py  PlotRawData.py  PlotResults.ipynb  PlotResults.py  SNR.py  other.py
filter/: Fir1.h.gch  lmsdemo.cpp  plot.py
(+1 files in other folders)
